// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders form errors 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={false}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Edit Item
          </span>
          <button
            className="headerButton"
            disabled={false}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          >
            <div>
              <div
                className="root"
              >
                <span
                  className="errorMessage"
                >
                  Form Error
                </span>
              </div>
              <div
                className="root"
              >
                <div
                  className="root container"
                >
                  <img
                    alt="Juno Sweater"
                    aria-hidden="true"
                    className="image placeholder"
                    loading="eager"
                    src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
                    style={
                      Object {
                        "--width": "240px",
                      }
                    }
                    width={240}
                  />
                  <img
                    alt="Juno Sweater"
                    className="image notLoaded"
                    loading="lazy"
                    onError={[Function]}
                    onLoad={[Function]}
                    sizes="240px"
                    src="https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=240&height=300&fit=cover"
                    srcSet="https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
                    style={
                      Object {
                        "--height": "300px",
                        "--width": "240px",
                      }
                    }
                    width={240}
                  />
                </div>
                <span
                  className="productName"
                >
                  Juno Sweater
                </span>
                <div
                  className="stockRow"
                >
                  <span>
                    <mock-FormattedMessage
                      defaultMessage="SKU # {sku}"
                      id="productDetail.skuNumber"
                      values={
                        Object {
                          "sku": "ABC",
                        }
                      }
                    />
                  </span>
                  <span>
                    Unknown
                  </span>
                </div>
                <div
                  className="price"
                >
                  <span>
                    €
                  </span>
                  <span>
                    456
                  </span>
                  <span>
                    .
                  </span>
                  <span>
                    78
                  </span>
                </div>
              </div>
              <Options
                classes={
                  Object {
                    "root": "optionRoot",
                  }
                }
                onSelectionChange={[MockFunction]}
                options={
                  Array [
                    "option3",
                    "option4",
                  ]
                }
                outOfStockVariants={
                  Array [
                    Array [
                      55,
                      56,
                    ],
                    Array [
                      31,
                    ],
                  ]
                }
                selectedValues={
                  Array [
                    "option1",
                    "option2",
                  ]
                }
              />
              <h3
                className="quantityLabel"
              >
                <mock-FormattedMessage
                  defaultMessage="Quantity"
                  id="productForm.quantity"
                />
              </h3>
              <div
                className="root"
              >
                <label
                  className="label"
                  htmlFor="123"
                />
                <button
                  aria-label="Decrease Quantity"
                  className="button_decrement"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="root"
                  >
                    <svg
                      className="icon"
                      fill="none"
                      height={22}
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                      viewBox="0 0 24 24"
                      width={22}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="5"
                        x2="19"
                        y1="12"
                        y2="12"
                      />
                    </svg>
                  </span>
                </button>
                <span
                  className="root"
                  style={
                    Object {
                      "--iconsAfter": 0,
                      "--iconsBefore": 0,
                    }
                  }
                >
                  <span
                    className="input"
                  >
                    <input
                      aria-label="Item Quantity"
                      className="input"
                      id="123"
                      inputMode="numeric"
                      min={0}
                      name="quantity"
                      onBlur={[Function]}
                      onChange={[Function]}
                      pattern="[0-9]*"
                      value={5}
                    />
                  </span>
                  <span
                    className="before"
                  />
                  <span
                    aria-hidden="false"
                    className="after"
                  />
                </span>
                <p
                  className="root"
                />
                <button
                  aria-label="Increase Quantity"
                  className="button_increment"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="root"
                  >
                    <svg
                      className="icon"
                      fill="none"
                      height={20}
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                      viewBox="0 0 24 24"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="12"
                        x2="12"
                        y1="5"
                        y2="19"
                      />
                      <line
                        x1="5"
                        x2="19"
                        y1="12"
                        y2="12"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={false}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={false}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Update"
                  id="productForm.submit"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;

exports[`renders form with data 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={false}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Edit Item
          </span>
          <button
            className="headerButton"
            disabled={false}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          >
            <div>
              <div
                className="root"
              >
                <div
                  className="root container"
                >
                  <img
                    alt="Juno Sweater"
                    aria-hidden="true"
                    className="image placeholder"
                    loading="eager"
                    src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
                    style={
                      Object {
                        "--width": "240px",
                      }
                    }
                    width={240}
                  />
                  <img
                    alt="Juno Sweater"
                    className="image notLoaded"
                    loading="lazy"
                    onError={[Function]}
                    onLoad={[Function]}
                    sizes="240px"
                    src="https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=240&height=300&fit=cover"
                    srcSet="https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
                    style={
                      Object {
                        "--height": "300px",
                        "--width": "240px",
                      }
                    }
                    width={240}
                  />
                </div>
                <span
                  className="productName"
                >
                  Juno Sweater
                </span>
                <div
                  className="stockRow"
                >
                  <span>
                    <mock-FormattedMessage
                      defaultMessage="SKU # {sku}"
                      id="productDetail.skuNumber"
                      values={
                        Object {
                          "sku": "ABC",
                        }
                      }
                    />
                  </span>
                  <span>
                    Unknown
                  </span>
                </div>
                <div
                  className="price"
                >
                  <span>
                    €
                  </span>
                  <span>
                    456
                  </span>
                  <span>
                    .
                  </span>
                  <span>
                    78
                  </span>
                </div>
              </div>
              <Options
                classes={
                  Object {
                    "root": "optionRoot",
                  }
                }
                onSelectionChange={[MockFunction]}
                options={
                  Array [
                    "option3",
                    "option4",
                  ]
                }
                outOfStockVariants={
                  Array [
                    Array [
                      55,
                      56,
                    ],
                    Array [
                      31,
                    ],
                  ]
                }
                selectedValues={
                  Array [
                    "option1",
                    "option2",
                  ]
                }
              />
              <h3
                className="quantityLabel"
              >
                <mock-FormattedMessage
                  defaultMessage="Quantity"
                  id="productForm.quantity"
                />
              </h3>
              <div
                className="root"
              >
                <label
                  className="label"
                  htmlFor="123"
                />
                <button
                  aria-label="Decrease Quantity"
                  className="button_decrement"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="root"
                  >
                    <svg
                      className="icon"
                      fill="none"
                      height={22}
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                      viewBox="0 0 24 24"
                      width={22}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="5"
                        x2="19"
                        y1="12"
                        y2="12"
                      />
                    </svg>
                  </span>
                </button>
                <span
                  className="root"
                  style={
                    Object {
                      "--iconsAfter": 0,
                      "--iconsBefore": 0,
                    }
                  }
                >
                  <span
                    className="input"
                  >
                    <input
                      aria-label="Item Quantity"
                      className="input"
                      id="123"
                      inputMode="numeric"
                      min={0}
                      name="quantity"
                      onBlur={[Function]}
                      onChange={[Function]}
                      pattern="[0-9]*"
                      value={5}
                    />
                  </span>
                  <span
                    className="before"
                  />
                  <span
                    aria-hidden="false"
                    className="after"
                  />
                </span>
                <p
                  className="root"
                />
                <button
                  aria-label="Increase Quantity"
                  className="button_increment"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="root"
                  >
                    <svg
                      className="icon"
                      fill="none"
                      height={20}
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                      viewBox="0 0 24 24"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="12"
                        x2="12"
                        y1="5"
                        y2="19"
                      />
                      <line
                        x1="5"
                        x2="19"
                        y1="12"
                        y2="12"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={false}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={false}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Update"
                  id="productForm.submit"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;

exports[`renders loading indicator while options are being fetched 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={true}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Edit Item
          </span>
          <button
            className="headerButton"
            disabled={true}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          >
            <LoadingIndicator
              classes={
                Object {
                  "root": "loading",
                }
              }
            />
          </div>
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={true}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={true}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Update"
                  id="productForm.submit"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;
